--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@fisch0920/use-dark-mode": "^2.4.0",
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/redis": "^1.6.10",
+    "@notionhq/client": "^2.2.14",
     "@react-icons/all-files": "^4.1.0",
     "@vercel/og": "^0.0.19",
+    "axios": "^1.6.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.4.1",
+    "formik": "^2.4.5",
     "got": "^12.0.3",
     "isomorphic-unfetch": "^3.1.0",
     "lqip-modern": "^1.2.0",
@@ -53,7 +56,8 @@
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
     "rss": "^1.2.2",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
