--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.3.1",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.4.1",
     "formik": "^2.4.5",
